--- a/csd/general-recurrence/sections/a1-eligible-time-intervals.adoc
+++ b/csd/general-recurrence/sections/a1-eligible-time-intervals.adoc
@@ -9,8 +9,8 @@ The interaction between eligible time intervals and selection rules
 specified within a repeating rule give rise to interesting properties
 that users should be aware of.
 
-
-=== Sample evaluation of a recurring interval
+[[annexa-example]]
+=== Sample evaluation of a recurring time interval with repeat rules
 
 `R/20150104T083000/PT15M00S/F2YL1M1KT{8,9}H30M` expresses a recurring
 interval (number of occurrences is unspecified) whose first occurrence
@@ -60,9 +60,9 @@ in accordance with 9.3.3, they should be obtained from the clock
 seconds value of the "`time interval start`" of `20150104T083000`, hence
 the clock seconds selection rule is specified as value `00`;
 
-** the recurrent occurrences therefore resolve to the rule "`in the last
-year of every two years, for every Sunday in January at both 8:30:00 AM
-and 9:30:00 AM, create a 15 minutes event.`"
+** the recurrent occurrences therefore resolve to the rule "`in the second
+year of every two year period beginning year 2014, for every Sunday in January at both 8:30:00 AM
+and 9:30:00 AM, create a 15 minutes occurence.`"
 
 [[figure-basic-recurrences]]
 .Resulting occurrences of the rule F3YL{2,4,6,8,10}M1D
