--- a/csd/general-recurrence/sections/03-termsdef.adoc
+++ b/csd/general-recurrence/sections/03-termsdef.adoc
@@ -12,34 +12,51 @@ consists of a set of eligible time intervals (<<term-eti>>) and
 selection rules (<<term-sel-rule>>) that allows computation of a set of
 matching instants (<<term-matching-instants>>)
 
-
 [[term-sel-rule]]
 ==== selection rule
 
-rule specifying restrictions on the value of a time scale component
+rule specifying restrictions on the value of a _time scale component_
 (<<ISO8601-1,clause 3.1.3.9>>)
 
-
+[[term-repeat-cycle]]
 ==== repeat cycle
 
-set of repeating instants (<<ISO8601-1,clause 3.1.1.2>>), calculated by
-a specified start instant and specified duration
+set of repeating _instants_ (<<ISO8601-1,clause 3.1.1.2>>), calculated by
+a specified start instant and specified _duration_
 (<<ISO8601-1,clause 3.1.1.6>>) gap between the repeating instants
 
 [[term-eti]]
 ==== eligible time interval
 
-time interval (<<ISO8601-1,clause 3.1.1.3>>) eligible for matching
-using selection rules (<<term-sel-rule>>)
+_time interval_ (<<ISO8601-1,clause 3.1.1.3>>) eligible for matching
+using _selection rules_ (<<term-sel-rule>>)
 
 
 [[term-matching-instants]]
 ==== matching instants
 
-set of instants (<<ISO8601-1>>), computed by a repeating rule
-(<<term-repeat-rule>>), that belongs within eligible time intervals
-(<<term-eti>>) and fulfills criteria set by specified selection rules
+set of _instants_ (<<ISO8601-1>>), computed by a _repeating rule_
+(<<term-repeat-rule>>), that belongs within _eligible time intervals_
+(<<term-eti>>) and fulfills criteria set by specified _selection rules_
 (<<term-sel-rule>>)
+
+
+[[term-movable-day]]
+==== movable day
+
+repeatedly occurring day in a calendar that is represented by criteria set by one or more _selection rules_ (<<term-sel-rule>>), but does not always resolve to a fixed calendar day in every _repeating cycle_ (<<term-repeat-cycle>>)
+
+NOTE: The selection of this term pays homage to the phrase “movable feast” used in some calendars to indicate the rule-based determination of annual events.
+
+[example]
+Thanksgiving Day in the U.S. and Canada, are considered movable days, set to the fourth Thursday in November and the second Monday in October, respectively.
+
+[example]
+First Day of Summer (sumardagurinn fyrsti) in Iceland is considered a movable day, set to the first Thursday after April 18th.
+
+[example]
+Father’s Day is celebrated on the third Sunday in June in North America and is considered a movable day.
+
 
 
 
@@ -49,79 +66,7 @@ set of instants (<<ISO8601-1>>), computed by a repeating rule
 [[symbols-general]]
 ==== General
 
-Representations and expressions specified in this document make use of the symbols listed in <<symbols-time-scale-component>> through <<symbols-separator>>.
-
-Representations (also referred to as "`format representations`") give rise to expressions for dates, times, intervals and recurring intervals.
-
-[example]
-[YYYY] is a format representation for a calendar year, where each Y is to be replaced by a single digit creating an expression, for example '`1985`'.
-
-[example]
-The date and time representation [YYYY]["`-`"][MM]["`-`"][DD] gives rise to the expression '`2003-02-10`' which identifies 10 February 2003.
-
-To clearly separate date and time representations, from and the text, punctuation marks and associated symbols used to describe them, the following symbols are used to demarcate boundaries of expressions and representations in this document:
-
-* single quotation marks enclose expressions (for example '`1985`'); in some cases they are omitted to reflect the actualities of the examples;
-
-* all individual tokens that are part of a representation are contained between the open and close bracket symbols ("`["` and "`]`"), when used in a representation the bracket symbols are not part of any expression of that representation; +
-+
-====
-For the date and time representation [YYYY]["`-`"][MM]["`-`"][DD], [YYYY],  ["`-`"],  [MM],  ["`-`"],  and [DD] are individual tokens enclosed by brackets.
-====
-
-* when double quotations marks enclose a string within a representation, that string is a literal and becomes part of any expression of that representation. +
-+
-====
-The representation [i]["`Y`"] represents a positive integer followed by the symbol "`Y`". '`12Y`' meaning "`12 years`" is an expression of that representation.
-====
-
-Quotation marks and brackets are not part of the expression or representation itself and must be omitted in implementation.
-
-All characters used in date and time expressions and representations are part of the <<ISOIEC646>> repertoire, except for "`hyphen`", "`minus`" and "`plus-minus`". In an environment where use is made of a character repertoire based on <<ISOIEC646>>, "`hyphen`" and "`minus`" should be both mapped onto "`hyphen-minus`".
-
-The character "`space`" shall not be used in the expressions.
-
-////
-NOTE:	These designators are used for the designation of units of time and nominal durations in the representations defined in this document. For the designation of units of time and durations in other contexts, <<ISO80000-3>> applies.
-////
-
-[[symbols-time-scale-component]]
-==== Time scale component symbols
-
-The following time scale component symbols are in implied form, for the representation of date and time.
-
-year::
-time scale component calendar year
-
-month::
-time scale component calendar month
-
-week::
-time scale component calendar week of year
-
-day::
-time scale component calendar day of month
-
-dayk::
-time scale component calendar day of week
-
-dayo::
-time scale component calendar day of year
-
-hour::
-time scale component clock hour
-
-min::
-time scale component clock minute
-
-sec::
-time scale component clock second
-
-dec::
-time scale component decade
-
-cent::
-time scale component century
+Representations specified in this document make use of symbols given in <<CC18011>> and the following.
 
 
 [[symbols-composite]]
@@ -153,44 +98,8 @@ indicates that the token following this symbol is optional (may be omitted)
 
 These symbols are used to represent designators in the date and time expressions:
 
-"`H`"::
-the hour designator, represented by the character "`H`", preceding a data element which represents the number of hours
-
-"`M`"::
-the month or minute designator, represented by the character "`M`", preceding a data element which represents the number of months or minutes
-//+
-//NOTE: Although "`M`" can be used to designate months or for minutes, its meaning is unambiguous in expressions because the time portion will be preceded by the time designator "`T`".
-
-"`P`"::
-the duration designator, represented by the character "`P`", preceding the component which represents the duration
-
 "`R`"::
 the recurring time interval designator, represented by the character "`R`"
-
-"`S`"::
-the second designator, represented by the character "`S`", preceding a data element which represents the number of seconds
-
-"`T`"::
-the time designator, represented by character "`T`", indicates:
-+
-** the start of the representation of local time of day to designate local time of day expressions as such,
-** the start of the representation of the time of day in date and time of day expressions,
-** the start of the representation of the number of hours, minutes or seconds in expressions of duration
-
-"`Y`"::
-the year designator, represented by the character "`Y`", preceding a data element which represents the number of years
-
-"`W`"::
-the week designator, represented by the character "`W`", preceding a data element which represents the ordinal number of a calendar week within the calendar year
-
-"`K`"::
-the calendar day of week designator, represented by the character "K", preceding a data element which represents the ordinal number of a calendar day within a calendar week
-
-"`O`"::
-the calendar day of year designator, represented by the character "O", preceding a data element which represents the ordinal number of a calendar day within a calendar year
-
-"`Z`"::
-the UTC designator, represented by the character "`Z`", added to the end of a time representation to indicate that a time of day is represented as UTC of day.
 
 "`I`"::
 the instance designator, represented by the character "I", indicates that a specific instance is to be selected within the time scale component
